--- a/css/styles.css
+++ b/css/styles.css
@@ -490,8 +490,6 @@
     .footer-sotial-media {
         display: block;
         margin-left: 120px;
-        margin-right: auto;
-        width: 208px;
         padding-left: 0;
         padding-right: 0;
     }
@@ -539,10 +537,7 @@
     }
 
     .footer-subscribe {
-        display: block;
-        /* width: 453px; */
-       
-        
+        margin-left: auto;
     }
 
     .footer-subscribe-title {
@@ -555,7 +550,7 @@
     }
 
     
-    .footer-wrap {
+    .footer-form {
         display: flex;
         gap: 12px;
         justify-content: flex-end;
@@ -641,7 +636,6 @@
         transform: translate(-50%, -50%) scale(1);
         transition: transform var(--transision-dur-and-func);
         width: 408px;
-        min-height: 576px;
         background-color: var(--color-dairy);
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
@@ -721,7 +715,7 @@
         display: block;
         font-weight: 400;
         font-size: 16px;
-        line-height: 1.17
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8E8F99;
         margin-bottom: 8px;
@@ -730,11 +724,11 @@
 
     .modal-label span {
         display: block;
-        margin-bottom: 4px;
     }
 
     .modal-label-title {
         font-size: 12px;
+        margin-bottom: 4px;
     }
 
     .input-wrap {
@@ -751,6 +745,7 @@
     }
 
     .modal-textarea {
+        display: block;
         width: 100%;
         height: 120px;
         border: 1px solid rgba(46, 47, 66, 0.4);
@@ -758,6 +753,7 @@
         outline: transparent;
         font-size: 16px;
         padding: 8px 16px;
+        margin-bottom: 16px;
         resize: none;
         transition: border-color var(--transision-dur-and-func);
     }
@@ -807,7 +803,9 @@
         border-color: var(--active-color-ocean);
     }
   
-
+    .modal-href {
+        color: var(--actent-color-iris) ;
+    }
     .modal-btn {
         display: block;
         margin-left: auto;
